Add Login page to the netflix

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "firebase": "^12.2.1",
+    "firebase-cli": "^1.2.0",
+    "firebase-tools": "^14.15.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.5"
